<resources>
    <!--Non translateable area start-->

    <!-- app deep links section -->
    <string name="website_domain" translatable="false">enewz.bestweby.com</string>

    <!--facebook credential-->
    <string name="FACEBOOK_APP_ID" translatable="false">352251878766792</string>

    <!-- app social site links section -->
    <string name="facebook_url" translatable="false">https://www.facebook.com/bestwebydeal/</string>
    <string name="youtube_url" translatable="false">https://www.youtube.com/Bestweby</string>
    <string name="twitter_user_id" translatable="false">twitter://user?user_id=742143</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url" translatable="false">https://twitter.com/Tech_NYT</string>
    <string name="instagram_url" translatable="false">https://www.instagram.com/nytimes</string>
    <string name="pinterest_url" translatable="false">https://www.pinterest.com/nytimes</string>

    <!-- ad mob credential -->
    <string name="admob_app_id" translatable="false">ca-app-pub-2494856291324390~1555071396</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Terms and conditions, privacy policy and faq url -->
    <string name="terms_url" translatable="false">https://docs.google.com/document/d/e/2PACX-1vTGNzycnME2GToDNBDtzsONu_PnHd2XOKwYwMM0TJqZqCz4KOEaeXdxY1p2SUuOdHm1mkgbuF0RytA6/pub</string>
    <string name="privacy_url" translatable="false">https://docs.google.com/document/d/e/2PACX-1vTIdZQVQUdGAyY7S43pPhNYVAyZ03Qyzmza674Gt_qlT8pVU118UXyzRMi-q23piQuScmkmuxL_Waek/pub</string>
    <string name="faq_url" translatable="false">https://docs.google.com/document/d/e/2PACX-1vQc8M7GQo46jwlh6LQdLjrXlpQbr16zZtsyZSMFkOkyv6VLgwwMVN6Q02Eqf7YGDaybe2_BSQ_DDAgf/pub</string>

    <!-- push notification topic -->
    <string name="push_notification_topic" translatable="false">enewz_notification</string>  <!--Replace with your notification topic -->

    <!-- App Settings Preference KEY-->
    <string name="pref_theme" translatable="false">perf_theme</string>
    <string name="pref_notification" translatable="false">perf_notification</string>
    <string name="pref_language" translatable="false">pref_language</string>
    <string name="pref_app_version" translatable="false">pref_app_version</string>
    <string name="pref_font_size" translatable="false">pref_font_size</string>

    <!-- Navigation drawer String -->
    <string name="navigation_open" translatable="false">open drawer</string>
    <string name="navigation_close" translatable="false">close drawer</string>

    <string name="player_error" translatable="false">Error initializing YouTube player: %s</string>

    <!--Non translateable area end-->


    <string name="app_name">ENEWZ</string>   <!--Replace with your app name -->
    <string name="app_moto">News App for Wordpress Site</string>

    <!-- Navigation View Menu String -->
    <string name="nav_news_template">News Template</string>
    <string name="nav_blog_template">Blog Template</string>
    <string name="nav_article_template">Article Template</string>
    <string name="nav_story_template">Story Template</string>
    <string name="nav_feed_template">Feed template</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_category">Categories</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_terms_condition">Terms &amp; Condition</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_support">Support</string>
    <string name="nav_social">Social</string>
    <string name="nav_facebook">Facebook</string>
    <string name="nav_youtube">Youtube</string>
    <string name="nav_twitter">Twitter</string>
    <string name="nav_instagram">Instagram</string>
    <string name="nav_pinterest">Pinterest</string>
    <string name="nav_others">Others</string>
    <string name="nav_rate_app">Rate App</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_more_apps">More Apps</string>

    <!-- Toolbar Title String -->
    <string name="toolbar_address">Address</string>
    <string name="toolbar_categories">Categories</string>
    <string name="toolbar_comments">Comments</string>
    <string name="toolbar_bookmarks">Bookmarks</string>
    <string name="toolbar_notification">Notifications</string>
    <string name="toolbar_notification_detail">Notification Detail</string>
    <string name="toolbar_settings">Settings</string>

    <!-- Toolbar Menu String -->
    <string name="toolbar_search">Type Something to Search</string>
    <string name="toolbar_filter">Filter</string>

    <!-- Item Menu String -->
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>

    <!--Toast, Snackbar message String -->
    <string name="failed_msg">Failed</string>
    <string name="comment_success_msg">Comment Success</string>
    <string name="no_internet_msg">No internet!</string>
    <string name="connect_msg">Connect</string>
    <string name="server_failed_msg">Server connection failed</string>
    <string name="no_data">No Data!</string>
    <string name="no_bookmarks">No Bookmarks!</string>
    <string name="no_notification">No Notifications!</string>
    <string name="login_msg">Please login first</string>
    <string name="logout_success">Logged out</string>


    <!-- App Settings -->
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Turn on/off notification</string>
    <string name="pref_text_title">Text size</string>
    <string name="pref_text_size">Select text size</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_size">Select Theme</string>
    <string name="pref_language_dialog_title">Languages</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_summary">English</string>
    <string name="pref_rtl_title">Right to Left UI</string>
    <string name="pref_rtl_summary">Enable/Disable right to left UI</string>
    <string name="pref_app_version_title">App version</string>
    <string name="pref_app_version_summary">v1.0</string>
    <string name="pref_font_title">Sign Out</string>
    <string name="pref_logout_summary">Sign out me from here</string>

    <!-- App Theme Settings -->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <!-- App Text Settings -->
    <string name="small_text">Small</string>
    <string name="default_text">Normal</string>
    <string name="large_text">Large</string>

    <!-- App Language Settings -->
    <string name="language_arabic">Arabic</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_german">German</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_indonesian">Indonesian</string>
    <string name="language_italian">Italian</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_turkish">Turkish</string>
    <string name="language_russian">Russian</string>


    <string name="please_sign_in">PLEASE SIGN IN WITH</string>
    <string name="facebook_cap">FACEBOOK</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_cap">GOOGLE</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_cap">EMAIL</string>
    <string name="or">OR</string>
    <string name="skip_login">SKIP</string>


    <string name="share_text">Install best news application from:</string>
    <string name="install_messenger">Install facebook messenger</string>
    <string name="permission_not_granted">Permission not granted!</string>


    <string name="text_placeholder">Text</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="posts">Posts</string>
    <string name="default_comments">0 Comments</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="already_saved">Already Saved</string>
    <string name="saved">Saved</string>
    <string name="view_detail">View Detail</string>
    <string name="detail">Detail</string>
    <string name="mark_read">Mark as Read</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="visit_url">Visit URL</string>
    <string name="related_posts">Related Posts</string>
    <string name="view_comments">View Comments</string>
    <string name="full_name_empty_msg">Enter Full Name</string>
    <string name="email_address_empty_msg">Enter Email Address</string>
    <string name="comment_content_empty_msg">Write something to comment</string>
    <string name="write_a_comment">Write a Comment</string>
    <string name="select_action">Select an Action</string>

</resources>
