<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/theme_light"
        android:dialogTitle="@string/pref_theme_size"
        android:entries="@array/app_theme_entries"
        android:entryValues="@array/app_theme_values"
        android:key="@string/pref_theme"
        android:summary="@string/pref_theme_size"
        android:title="@string/pref_theme_title"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_notification"
        android:summary="@string/pref_notification_summary"
        android:title="@string/pref_notification_title"/>

    <ListPreference
        android:defaultValue="2"
        android:dialogTitle="@string/pref_language_dialog_title"
        android:entries="@array/app_locality_entries"
        android:entryValues="@array/app_locality_values"
        android:key="@string/pref_language"
        android:summary="@string/pref_language_summary"
        android:title="@string/pref_language_title"/>

    <ListPreference
        android:defaultValue="@string/default_text"
        android:dialogTitle="@string/pref_text_size"
        android:entries="@array/app_text_size_entries"
        android:entryValues="@array/app_text_size_entries"
        android:key="@string/pref_font_size"
        android:summary="@string/pref_text_size"
        android:title="@string/pref_text_title"/>

<!--    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_rtl"
        android:summary="@string/pref_rtl_summary"
        android:title="@string/pref_rtl_title"/>-->

    <Preference
        android:key="@string/pref_app_version"
        android:summary="@string/pref_app_version_summary"
        android:title="@string/pref_app_version_title"/>

</androidx.preference.PreferenceScreen>